force-app/main/default/objects/CI_Engagements__c/CI_Engagements__c.object-meta.xml
<CustomObject>
    <label>CI Engagements</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>CI Engagement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CI Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>