force-app/main/default/objects/CI_Engagements__c/fields/Engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Date__c</fullName>
    <label>Engagement Date</label>
    <type>Date</type>
</CustomField>