force-app/main/default/objects/CI_Engagements__c/fields/Engagement_Name__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Name__c</fullName>
    <label>Engagement Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>