force-app/main/default/objects/CI_Engagements__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CIP 1</fullName>
            </value>
            <value>
                <fullName>CIP 2</fullName>
            </value>
            <value>
                <fullName>Improvement Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>