force-app/main/default/objects/CI_Engagements__c/fields/Initiatives__c.field-meta.xml
<CustomField>
    <fullName>Initiatives__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiatives</label>
    <referenceTo>Initiatives__c</referenceTo>
    <relationshipLabel>CI Engagements</relationshipLabel>
    <relationshipName>CI_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>