force-app/main/default/objects/CI_Engagements__c/fields/Lead_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Lead_Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Trainer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CI_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>